bug fixed: shift scrolling issue

--- a/src/components/testimonial/TestimonialManager.module.css
+++ b/src/components/testimonial/TestimonialManager.module.css
@@ -4,7 +4,7 @@
 
 .slides {
   display: flex;
-  overflow-x: scroll;
+  overflow-x: hidden;
   overflow-y: hidden;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
